	for tags using the ';' as a separator

	IMPROVEMENT: can specify several templates for the export
	filename. gtkpod selects according to the extension given.

	IMPROVEMENT: streamlined layout of info window

	IMPROVEMENT: included 	Andrew Huntwork's patch to fix issues
	concerning case-sensitivity of filenames under some conditions.

	IMPROVEMENT: when importing the iTunesDB automatically on
	startup, no window was opened until the import was
	finished. Thanks to Andrew Huntwork the window now opens
	before the import starts and progress can be followed in the
	usual manner.

	IMPROVEMENT: send 'eject' to the iPod after unmounting. This
	only works under LINUX and if the user has write access to the
	device file (e.g. /dev/sda2)

	IMPROVEMENT: when writing to the iPod automatically create
	iPod's directories when they are not present.

	BUGFIX: Fixed compile error when compiling without mp4 support

	BUGFIX: Fixed compile error when compiling with gcc 2.95

	BUGFIX: Tags of tracks on the iPod were never changed (thanks
	to Andrew Huntwork)

gtkpod V0.72
        NEW FEATURE: tags can now be set from the filename using a
	template like "%a - %A/%T %t.mp3".

	IMPROVEMENT: read and write ID3v2.4 tags. This has been achieved
	by migrating to the id3tag library. Using ID3v2.4 tags with
	unicode encoding takes away the need to worry about which encoding
	is used for the tags. Old "broken"-style locale charset encodings
	in tags are still supported, of course.

	BUGFIX: configure script was broken -- even though mp4 support was
	configured in, gtkpod was built without :-(

gtkpod V0.70
	NEW FEATURE: import of AAC files (.m4a) supported, provided the
	mp4v2 library from the mpeg4ip project
	(mpeg4ip.sourceforge.net) is available during the compilation of
	gtkpod. Writing tags to AAC files is also supported.  .m4p files
	can also be imported, but they are not played by the iPod. .m4a
	files work fine.

	NEW FEATURE: info window showing total file size, play