@@ -493,6 +493,16 @@ prefs_window_create(void)
 	    gtk_notebook_set_current_page (GTK_NOTEBOOK (w),
 					   prefs_get_last_prefs_page ());
 	}
+	if ((w = lookup_widget (prefs_window, "cfg_export_check_existing")))
+	{
+	    gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(w),
+					    prefs_get_export_check_existing());
+	}
+	if ((w = lookup_widget (prefs_window, "cfg_fix_path")))
+	{
+	    gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(w),
+					    prefs_get_fix_path());
+	}
 	if ((w = lookup_widget (prefs_window, "cfg_automount_ipod")))
 	{
 	    gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(w),
@@ -604,6 +614,8 @@ prefs_window_set(void)
 	prefs_set_update_charset(tmpcfg->update_charset);
 	prefs_set_write_charset(tmpcfg->write_charset);
 	prefs_set_add_recursively(tmpcfg->add_recursively);
+	prefs_set_fix_path(tmpcfg->fix_path);
+	prefs_set_export_check_existing(tmpcfg->export_check_existing);
 	prefs_set_automount(tmpcfg->automount);
 	prefs_set_export_template(tmpcfg->export_template);
 	prefs_set_write_gaintag(tmpcfg->write_gaintag);
@@ -1078,6 +1090,16 @@ void prefs_window_set_sort_tab_num (gint num)
 void prefs_window_set_toolbar_style (GtkToolbarStyle style)
 {
     tmpcfg->toolbar_style = style;
+}
+
+void prefs_window_set_export_check_existing(gboolean val)
+{
+    tmpcfg->export_check_existing = val;
+}
+
+void prefs_window_set_fix_path(gboolean val)
+{
+    tmpcfg->fix_path = val;
 }
 
 void prefs_window_set_automount(gboolean val)
