@@ -80,6 +80,8 @@ void prefs_window_set_write_charset (gboolean val);
 void prefs_window_set_add_recursively (gboolean val);
 void prefs_window_set_toolbar_style (GtkToolbarStyle val);
 void prefs_window_set_sort_tab_num (gint num);
+void prefs_window_set_export_check_existing (gboolean val);
+void prefs_window_set_fix_path (gboolean val);
 void prefs_window_set_automount (gboolean val);
 void prefs_window_set_export_template (const gchar *mp);
 void prefs_window_set_write_gaintag (gboolean val);
